--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.3.0",
     "@vue/tsconfig": "^0.7.0",
-    "daisyui": "^4.12.23",
+    "daisyui": "5.0.0-beta.8",
     "eslint": "^9.18.0",
     "eslint-plugin-vue": "^9.32.0",
     "jiti": "^2.4.2",
