started UI for dataset section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
   },
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "css.customData": [".vscode/tailwind.json"]
+  "files.associations": {
+    "*.css": "tailwindcss"
+  }
 }
