--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "main": "app/main.js",
   "scripts": {
     "dev": "vite",
+    "electron": "electron .",
+    "e-dev": "set NODE_ENV=debug&& run-p electron dev",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -25,6 +28,7 @@
     "@vue/eslint-config-typescript": "^14.3.0",
     "@vue/tsconfig": "^0.7.0",
     "daisyui": "5.0.0-beta.8",
+    "electron": "^34.2.0",
     "eslint": "^9.18.0",
     "eslint-plugin-vue": "^9.32.0",
     "jiti": "^2.4.2",
