Start with tag loading

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "electron": "electron .",
     "e-dev": "set NODE_ENV=debug&& run-p dev electron",
+    "e-prod": "run-p dev electron",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
