--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.3.0",
     "@vue/tsconfig": "^0.7.0",
-    "daisyui": "5.0.0-beta.8",
+    "daisyui": "5.0.0",
     "electron": "^34.2.0",
     "eslint": "^9.18.0",
     "eslint-plugin-vue": "^9.32.0",
