--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "better-sqlite3": "^11.8.1",
     "tailwindcss": "^4.0.6",
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@electron/rebuild": "^3.7.1",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.13.1",
     "@vitejs/plugin-vue": "^5.2.1",
