--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "better-sqlite3": "^11.8.1",
+    "pinia": "^3.0.1",
     "tailwindcss": "^4.0.6",
     "vue": "^3.5.13"
   },
