--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "better-sqlite3": "^11.8.1",
     "pinia": "^3.0.1",
+    "strip-ansi": "^7.1.0",
     "tailwindcss": "^4.0.6",
     "vue": "^3.5.13"
   },
