feat: add embedded Python support and enhance undo/redo functionality
- Add embedded Python support to improve deployment and reduce external dependencies
- Enhance undo/redo functionality in dataset and tag group stores for better state management
- Update build configuration to include embedded Python and exclude unnecessary files
- Improve application close behavior to check for unsaved changes before quitting

--- a/package.json
+++ b/package.json
@@ -72,20 +72,33 @@
         "to": "tagger",
         "filter": [
           "**/*",
-          "!**/venv/**"
+          "!**/venv/**",
+          "!**/embedded_python/*",
+          "!**/dependencies_installed"
         ]
       },
       {
         "from": "Data",
         "to": "Data",
         "filter": [
-          "**/*"
+          "**/*",
+          "!**/settings.json",
+          "!**/TagGroups/tag_groups.json"
         ]
       }
     ],
     "win": {
       "target": [
         "nsis"
+      ],
+      "extraResources": [
+        {
+          "from": "tagger/embedded_python",
+          "to": "tagger/embedded_python",
+          "filter": [
+            "**/*"
+          ]
+        }
       ]
     },
     "nsis": {
