--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "better-sqlite3": "^11.8.1",
+    "lodash": "^4.17.21",
     "pinia": "^3.0.1",
     "strip-ansi": "^7.1.0",
     "tailwindcss": "^4.0.6",
