Implement VirtualImage component to handle image rendering with intersection observer for lazy loading and adjust embedded python path for build.

--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
       ],
       "extraResources": [
         {
-          "from": "tagger/embedded_python",
+          "from": "embedded_python",
           "to": "tagger/embedded_python",
           "filter": [
             "**/*"
