--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "better-sqlite3": "^11.8.1",
+    "dtext-parser": "^1.0.0",
     "lodash": "^4.17.21",
     "pinia": "^3.0.1",
     "sharp": "^0.34.2",
