--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@electron/rebuild": "^3.7.1",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.13.1",
     "@vitejs/plugin-vue": "^5.2.1",
@@ -74,9 +73,7 @@
         "to": "tagger",
         "filter": [
           "**/*",
-          "!**/venv/**",
-          "!**/embedded_python/*",
-          "!**/dependencies_installed"
+          "!**/embedded_python/**"
         ]
       },
       {
