--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "~5.7.3",
     "vite": "^6.0.11",
+    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^2.2.0"
   },
   "pnpm": {
